update movies
